# CStream

./: .gitignore  README.md
1.Fine-grained-stages/: CMakeLists.txt  README.md
1.Fine-grained-stages/a64build/: a64build.sh
1.Fine-grained-stages/benchmark/: CMakeLists.txt  README.md
1.Fine-grained-stages/benchmark/datasets/: Mock.txt
1.Fine-grained-stages/benchmark/src/: Benchmark.cpp
1.Fine-grained-stages/contrib/gbindata/: tcomp32.h
1.Fine-grained-stages/contrib/gbindata/huf0_fse/: bitstream.h  compiler.h  debug.h  error_private.h  error_public.h  fse.h  fseU16.h  hist.h  huf.h  hufx6.h  mem.h
1.Fine-grained-stages/contrib/gbindata/turboRLE/: conf.h  sse_neon.h  time_.h  trle.h  trle_.h
1.Fine-grained-stages/contrib/librdtsc/: rdtsc.h
1.Fine-grained-stages/contrib/log4cxx/: appender.h  appenderskeleton.h  asyncappender.h  basicconfigurator.h  consoleappender.h  dailyrollingfileappender.h  defaultconfigurator.h  defaultloggerfactory.h  file.h  fileappender.h  hierarchy.h  htmllayout.h  layout.h  level.h  log4cxx.h  logger.h  logmanager.h  logstring.h  mdc.h  ndc.h  patternlayout.h  propertyconfigurator.h  provisionnode.h  rollingfileappender.h  simplelayout.h  stream.h  ttcclayout.h  writerappender.h
1.Fine-grained-stages/contrib/log4cxx/config/: propertysetter.h
1.Fine-grained-stages/contrib/log4cxx/db/: odbcappender.h
1.Fine-grained-stages/contrib/log4cxx/filter/: andfilter.h  denyallfilter.h  expressionfilter.h  levelmatchfilter.h  levelrangefilter.h  locationinfofilter.h  mapfilter.h  propertyfilter.h  stringmatchfilter.h
1.Fine-grained-stages/contrib/log4cxx/helpers/: absolutetimedateformat.h  appenderattachableimpl.h  aprinitializer.h  bufferedoutputstream.h  bufferedwriter.h  bytearrayinputstream.h  bytearrayoutputstream.h  bytebuffer.h  cacheddateformat.h  charsetdecoder.h  charsetencoder.h  class.h  classregistration.h  condition.h  cyclicbuffer.h  datagrampacket.h  datagramsocket.h  date.h  dateformat.h  datelayout.h  datetimedateformat.h  exception.h  fileinputstream.h  fileoutputstream.h  filewatchdog.h  inetaddress.h  inputstream.h  inputstreamreader.h  integer.h  iso8601dateformat.h  loader.h  locale.h  loglog.h  messagebuffer.h  mutex.h  object.h  objectimpl.h  objectoutputstream.h  objectptr.h  onlyonceerrorhandler.h  (+30 more)
1.Fine-grained-stages/contrib/log4cxx/net/: smtpappender.h  socketappender.h  socketappenderskeleton.h  sockethubappender.h  syslogappender.h  telnetappender.h  xmlsocketappender.h
1.Fine-grained-stages/contrib/log4cxx/nt/: nteventlogappender.h  outputdebugstringappender.h
1.Fine-grained-stages/contrib/log4cxx/pattern/: classnamepatternconverter.h  datepatternconverter.h  filedatepatternconverter.h  filelocationpatternconverter.h  formattinginfo.h  fulllocationpatternconverter.h  integerpatternconverter.h  levelpatternconverter.h  linelocationpatternconverter.h  lineseparatorpatternconverter.h  literalpatternconverter.h  loggerpatternconverter.h  loggingeventpatternconverter.h  messagepatternconverter.h  methodlocationpatternconverter.h  nameabbreviator.h  (+8 more)
1.Fine-grained-stages/contrib/lz4/: lz4.h  lz4frame.h  lz4hc.h
1.Fine-grained-stages/contrib/tonymathlib/: mathBP.h  mathGA.h  mathRBF.h  mathkmeans.h  mathsetting.h  mathtype.h
1.Fine-grained-stages/include/CoProcessing/: Tcomp32Cop.h  Tcomp32CopBa.h  Tdic32CopBa.h
1.Fine-grained-stages/include/CommonData/: CommonData.hpp
1.Fine-grained-stages/include/CompLibs/: CompLibFse.hpp  CompLibLz4.hpp  CompLibTcomp32.hpp  CompLibTrle.hpp  CompLibZlib.hpp
1.Fine-grained-stages/include/CompressionComponents/: AbstractComponent.hpp  LZ4Components.hpp  MRLEComponents.hpp  ReadMemComponent.hpp  RemapComponent.hpp  WriteMemComponent.hpp
1.Fine-grained-stages/include/CompressionQuery/: CompressionQuery.hpp
1.Fine-grained-stages/include/CompressionTasks/: AbstractTask.hpp  LZ4Task.hpp  MRLETask.hpp  Tcomp32Task.hpp  Tdic32Task.hpp
1.Fine-grained-stages/include/PartitionRunners/: AbstractPartitionRunner.hpp  LZ4PartitionRunner.hpp  Tcomp32PartitionRunner.hpp  Tdic32PartitionRunner.hpp
1.Fine-grained-stages/include/PipeLines/: AbstractPipeLine.hpp  FakePipeLine.hpp  LZ4PipeLine.hpp  Tcomp32PipeLine.hpp  Tcomp32PipeLine2S.hpp  Tdic32PipeLine2S.hpp  Tdic32PipeLine3S.hpp
1.Fine-grained-stages/include/Utils/: Cpp11Clock.hpp  FileSp.hpp  Logger.hpp  MTSBHashTable.h  MemAddresser.hpp  PerfTool.hpp  StacktraceLoader.hpp  TimeTestBench.hpp  UtilityFunctions.hpp
1.Fine-grained-stages/src/: CMakeLists.txt
1.Fine-grained-stages/src/CoProcessing/: CMakeLists.txt  Tcomp32Cop.cpp  Tcomp32CopBa.cpp  Tdic32CopBa.cpp
1.Fine-grained-stages/src/CommonData/: CMakeLists.txt  CommonData.cpp
1.Fine-grained-stages/src/CompLibs/: CMakeLists.txt  ComLibFse.cpp  ComLibLz4.cpp  CompLibTcom32.cpp  CompLibTrle.cpp  CompLibZlib.cpp
1.Fine-grained-stages/src/CompressionComponents/: AbstractComponent.cpp  CMakeLists.txt  LZ4Components.cpp  MRLEComponents.cpp  ReadMemComponent.cpp  RemapComponent.cpp  WriteMemComponent.cpp
1.Fine-grained-stages/src/CompressionQuery/: CMakeLists.txt  CompressionQuery.cpp
1.Fine-grained-stages/src/CompressionTasks/: AbstarctTask.cpp  CMakeLists.txt  LZ4Task.cpp  MRLETask.cpp  Tcomp32Task.cpp  Tdic32Task.cpp
1.Fine-grained-stages/src/PartitionRunners/: AbstractPartitionRunner.cpp  CMakeLists.txt  LZ4PartitionRunner.cpp  Tcomp32PartitionRunner.cpp  Tdic32PartitionRunner.cpp
1.Fine-grained-stages/src/PipeLines/: AbstractPipeLine.cpp  CMakeLists.txt  FakePipeLine.cpp  LZ4PipeLine.cpp  Tcomp32PipeLine.cpp  Tcomp32PipeLine2S.cpp  Tdic32PipeLine2S.cpp  Tdic32PipeLine3S.cpp
1.Fine-grained-stages/src/Utils/: CMakeLists.txt  Cpp11Clock.cpp  FileSp.cpp  MTSBHashTable.cpp  MemAddresser.cpp  PerfTool.cpp  TimeTestBench.cpp  UtilityFunctions.cpp
1.Fine-grained-stages/test/: CMakeLists.txt
1.Fine-grained-stages/test/SystemTest/: SimpleTest.cpp
3-Dataset/Micro/: CMakeLists.txt  README.md
3-Dataset/Micro/include/: Duplicate.h  GenGaussian.h  GenRand.h  GenZipf.hpp
3-Dataset/Micro/src/: Duplicate.c  GenGaussian.c  GenRand.c  GenZipf.cpp  main.cpp
(+372 files in other folders)
